# tigerbeetle-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.zig  build.zig.zon
.github/workflows/: CI.yml  codeql.yml
cmake/: FindTigerBeetle.cmake  TigerBeetle.pc.in  TigerBeetleConfig.cmake.in  deps.cmake  findTigerbeetle.cmake  find_tigerbeetle.cmake
example/: basic.cpp
examples/: basic.cpp  two_phase.cpp  two_phase_many.cpp
include/: module.modulemap  tb_client.hpp  tb_logger.hpp
scripts/: build.zig  run_with_tb.zig  runner.bat  runner.ps1  runner.sh  start_tigerbeetle.cmd  start_tigerbeetle.sh  zigcxx.cmd  zigcxx.sh
src/: main.cpp
tests/: accountTest.cpp  transferTest.cpp
